[tool.poetry]
name = "tg-chat-bot"
version = "0.1.0"
description = ""
authors = ["Kom46 <kommunizm46@gmail.com>"]
readme = "README.md"
packages = [{include = "tg_chat_bot"}]

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.4.1"
pyqt5 = "=5.15.10"   
pyqt5-qt5 = "=5.15.2"
opentele = "^1.15.1"
flake8 = "^7.0.0"
black = "^24.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
